--- a/UI/login.htm
+++ b/UI/login.htm
@@ -5,14 +5,14 @@
     </head>
     <body>
         <div class="imgcontainer">
-            <img src="logo.png" alt="Avatar" class="avatar">
+            <img src="logo.jpg" alt="Avatar" class="avatar">
         </div>
         <div id="container">
                 <form>
                     <label for="username">Username:</label>
-                    <input type="text" id="username" type="username"/>
+                    <input type="text" id="username" type="username" placeholder="Enter Username"/>
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="password"/>
+                    <input type="password" id="password" name="password" placeholder="Enter Password"/>
                     <div id="lower">
                         <input type="checkbox"/><label for="checkbox">Keep me logged in</label>
                         <input type="submit" value="Login"/>
