--- a/UI/login.htm
+++ b/UI/login.htm
@@ -9,14 +9,14 @@
         </div>
         <div id="container">
                 <form>
-                    <label for="username">Username:</label>
+                    <label for="username"><b>Username:</b></label>
                     <input type="text" id="username" type="username" placeholder="Enter Username"/>
-                    <label for="password">Password:</label>
+                    <label for="password"><b>Password:</b></label>
                     <input type="password" id="password" name="password" placeholder="Enter Password"/>
                     <div id="lower">
                         <input type="checkbox"/><label for="checkbox">Keep me logged in</label>
                         <input type="submit" value="Login"/>
-                    </div><!--/ lower-->
+                    </div>
                 </form>
         </div>
     </body>
