--- a/UI/signup.htm
+++ b/UI/signup.htm
@@ -13,22 +13,23 @@
             <hr>
             <form>
                 <label for="firstname">First Name:</label>
+                <input type="text" id="firstname" name="firstname" placeholder="Enter First Name" required/>
                 <label for="lastname">Last Name:</label><br/>
-                <input type="text" id="firstname" name="firstname" required/>
-                <input type="text" id="lastname" name="lastname" required/>
+                <input type="text" id="lastname" name="lastname" placeholder="Enter Last Name" required/>
                 <label for="storename">Store Name:</label>
-                <input type="text" id="storename" name="storename"/>
+                <input type="text" id="storename" name="storename" placeholder="Enter Store Name"/>
                 <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email"/>
+                <input type="email" id="email" name="email" placeholder="Enter Email Address" required/>
                 <label for="username">Username:</label>
-                <input type="text" id="username" type="username"/>
+                <input type="text" id="username" type="username" placeholder="Enter Username" required/>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password"/>
+                <input type="password" id="password" name="password" placeholder="Enter Password" required/>
                 <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="password" name="password"/>
-                <div id="lower">
-                    <input type="submit" value="Sign Up"/>
-                </div><!--/ lower-->
+                <input type="password" id="password" name="password" placeholder="Confirm Password" required/>
+                <div class="lower">
+                    <button type="submit" class="signupbtn">Sign Up</button>
+                    <button type="button" class="cancelbtn">Cancel</button>
+                </div>
             </form>
         </div>
     </body>
